# Polaris2

./: .gitignore  AGENTS.md  README.md  code-review.md  opencode.json  pyproject.toml
.agents/skills/orchestrator/: SKILL.md
.agents/skills/orchestrator/scripts/: manage_worktrees.py
src/polaris2/: cartography.py  config.py  models.py
src/polaris2/cli/: app.py
src/polaris2/core/: almanac.py  ephemeris.py  reduction.py  scenario.py  sight.py
src/polaris2/tui/: app.py  polaris2.tcss
src/polaris2/utils/: angles.py  io.py
src/polaris2/webui/: _launcher.py  app.py
tests/: test_almanac.py  test_angles.py  test_angles_edge.py  test_cartography.py  test_cli.py  test_cli_main.py  test_cli_select.py  test_io.py  test_launcher.py  test_models.py  test_reduction.py  test_scenario.py  test_sight.py  test_sight_full.py  test_tui.py  test_webui.py
