[project]
name = "polaris2"
version = "0.1.0"
description = "Celestial navigation scenario generator and sight reduction simulator"
requires-python = ">=3.11"
dependencies = [
    "skyfield",
    "pydantic>=2.0",
    "pyyaml",
    "numpy",
    "scipy",
    "textual",
    "streamlit",
    "folium",
    "streamlit-folium",
    "matplotlib",
    "pytz",
    "sgp4",
    "ruff>=0.15.12",
]

[project.scripts]
polaris2 = "polaris2.cli.app:main"
polaris2-tui = "polaris2.tui.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "SIM", "PL"]
ignore = ["SIM117", "PLR0913", "S311", "S110", "PLW0603", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "F401", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["src/polaris2/webui/*", "src/polaris2/tui/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.uv.tasks]
cli = "polaris2"
tui = "polaris2-tui"
web = "streamlit run src/polaris2/webui/app.py"
test = "pytest tests/"

[tool.uv.sources]
