[project]
name = "polaris2"
version = "0.1.0"
description = "Celestial navigation scenario generator and sight reduction simulator"
requires-python = ">=3.11"
dependencies = [
    "celnav-core",
    "skyfield",
    "pyyaml",
    "textual",
    "streamlit",
    "folium",
    "streamlit-folium",
    "ruff>=0.15.12",
]

[project.scripts]
polaris2 = "polaris2.cli.app:main"
polaris2-tui = "polaris2.tui.app:main"
polaris2-web = "polaris2.webui._launcher:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "SIM", "PL"]
ignore = ["S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "F401", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.uv.sources]
celnav-core = { path = "../celnav-core", editable = true }
